@@ -6,6 +6,7 @@ Change Log
 - Issue 87 - warn about pull up/down on i2c pins
 - Issue 86/75 - wait_for_edge() bugfix
 - Issue 84 - recognise RPi properly when using a custom kernel
+- Issue 90 - cleanup() on a list/tuple of channels
 
 0.5.8
 -----
